# AppOC

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_static/03/: SST_ABSO_002.00E_004.00E_38.00N_40.00N_19800101_20251231_timeseries.csv
docs/notebooks/: 00_Introduccio.ipynb
docs/notebooks/01_ML/: 01_Introduccio.ipynb  02_Optimization.ipynb  03_Trees.ipynb  04_PCA.ipynb
docs/notebooks/01_ML/sol/: 01_SOL.ipynb  02_SOL.ipynb  03_SOL.ipynb  04_SOL.ipynb
docs/notebooks/02_Xarxes/: 01_Introduccio.ipynb  02_MLP_Scikit.ipynb  03_MLP_Pytorch.ipynb  04_Projecte.ipynb  05_NetCDF_xarray.ipynb
docs/notebooks/02_Xarxes/Sol/: 02.ipynb  03.ipynb
docs/notebooks/03_Series/: 01_Introduccio.ipynb  02_Students.ipynb  02_Xarxes_Recurrents.ipynb  03_LSTM_GRU.ipynb  04_Projecte.ipynb
docs/notebooks/03_Series/Sol/: 01_Introduccio.ipynb  02.ipynb  03.ipynb
docs/notebooks/05_Text/: 01_LLM_Fundamentals.ipynb  02_Prompt_Engineering.ipynb  03_Tokenization.ipynb  04_Agents.ipynb  05_Evaluation_Limitations_of_LLMs.ipynb
notebooks/: 00_Introduccio.ipynb
