[project]
name = "appoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.8",
    "myst-parser>=5.0.0",
    "nbsphinx>=0.9.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
