[project]
name = "appoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.8",
    "myst-parser>=5.0.0",
    "nbsphinx>=0.9.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipykernel==7.2.0",
    "ipython==9.13.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "stack-data==0.6.3",
    "wcwidth==0.6.0",
    "transformers>=5.6.2",
    "openai>=2.32.0",
    "netcdf4>=1.7.4",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
]
